@@ -4,7 +4,8 @@
 - KLog is able to import QSOs with no BAND field if FREQ field is present.
 - KLog offers the user a default value if RST_TX or RST_RX field is not present when importing.
 - GUI: Added some shortcuts in the preference widget.
-- Support of realtime log upload to ClubLog.org
+- Support of realtime upload & deletion removal of a single QSO from ClubLog.org.
+- Updated the DB with the PROP_MODE options.
 
 April-2015 - 0.9.1.1
 - Bugfix: Editing a QSO with satellite data was not properly done and caused some errors.
